[package]
name = "chaz"
version = "0.3.0"
edition = "2021"
authors = ["Patrick Jackson <patrick@jackson.dev>"]
readme = "README.md"
license = "MIT"
description = "Chaz is an AI agent orchestrator for Matrix."
repository = "https://github.com/arcuru/chaz"
homepage = "https://github.com/arcuru/chaz"

[[bin]]
name = "chaz"
test = false

[dependencies]
headjack = "0.5"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber = "0.3"
tracing = "0.1"
matrix-sdk = "0.7"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
regex = "1"
dirs = "5"
openai-api-rs = "5"
eidetica = { git = "https://github.com/arcuru/eidetica", default-features = false }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
meval = "0.2"
reqwest = "0.12"
serde_json = "1"
