[package]
name = "chaz"
version = "0.3.0"
edition = "2021"
authors = ["Patrick Jackson <patrick@jackson.dev>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
description = "Chaz is an AI agent orchestrator for Matrix."
repository = "https://github.com/arcuru/chaz"
homepage = "https://github.com/arcuru/chaz"

[[bin]]
name = "chaz"

[dependencies]
headjack = { git = "https://github.com/arcuru/vibe-headjack" }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "io-util"] }
tracing-subscriber = "0.3"
tracing = "0.1"
matrix-sdk = { version = "0.16", default-features = false, features = ["markdown", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
regex = "1"
dirs = "5"
openai-api-rs = "5"
eidetica = { git = "https://github.com/arcuru/eidetica", features = ["sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
meval = "0.2"
reqwest = "0.12"
serde_json = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-stream = "0.1"
tiktoken-rs = "0.11"
