[workspace]
resolver = "3"
members = ["crates/lib", "crates/bin"]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Patrick Jackson <patrick@jackson.dev>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/arcuru/chaz"
homepage = "https://github.com/arcuru/chaz"
# Can't publish to crates.io while headjack/eidetica are git-rev pinned.
publish = false

[workspace.dependencies]
# Pinned external sources — kept in sync across both crates.
headjack = { git = "https://github.com/arcuru/headjack", rev = "0715bf369de97fdb02b915fef682c396f34f24b9" }
eidetica = { git = "https://github.com/arcuru/eidetica", rev = "d0cc682a1a8c605385ddc60acc01754801514127", features = ["sqlite"] }

# Shared third-party deps.
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
matrix-sdk = { version = "0.16", default-features = false, features = ["markdown", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
regex = "1"
dirs = "5"
async-openai = { version = "0.36", default-features = false, features = ["rustls", "byot", "chat-completion"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
meval = "0.2"
reqwest = "0.12"
url = "2"
uuid = { version = "1", features = ["v4"] }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-stream = "0.1"
tiktoken-rs = "0.11"
wasmtime = "43"
blake3 = "1"

# Dev-deps shared.
wat = "1"
tempfile = "3"
