[package]
name = "chaz-core"
description = "Core library for chaz — runtime, tools, extensions, session management."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[lib]
name = "chaz_core"

[dependencies]
anyhow.workspace = true
async-openai.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
cron.workspace = true
dirs.workspace = true
eidetica.workspace = true
futures.workspace = true
headjack.workspace = true
lazy_static.workspace = true
matrix-sdk.workspace = true
meval.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
wasmtime.workspace = true

[dev-dependencies]
tempfile.workspace = true
wat.workspace = true
wiremock = "0.6"
